Fix background on recipes pages
 Side-bars and backdrop are no longer being cut off at viewport height
 if content is higher. Solution found here:
 https://stackoverflow.com/questions/6654958/make-body-have-100-of-the-browser-height

--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     font-family: monospace;
 }
 
-html,
-body {
+html {
     height: 100%;
 }
 
 body {
+    min-height: 100%; /* this allows body height to change dynamically*/
     margin: 0;
     padding: 0;
     display: flex;
@@ -22,10 +22,10 @@ body {
     /* box-sizing: border-box; */
     color: darkblue;
     background-color: beige;
-    height: 100%;
+    min-height: 100%; /* this should accomplish same what I wanted max(100vh, auto) do but actually work */
     width: min(600px, 100vw);
-    flex: 1 0 600px;
-    margin: auto;
+    flex: 1 0 auto;
+    /* margin: auto; */ /* this was causing main page content to be centered with white bars on top and bottom */
     padding: 8px;
 }
 
